initial refactorings for Java 25 compatibility
spotbugs + pmd-plugin still need new releases that work on Java 25